Add current user api. #3
