# handler/user.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"fmt"
 
+	"github.com/golang/protobuf/ptypes/empty"
 	"github.com/raahii/golang-grpc-realworld-example/auth"
 	"github.com/raahii/golang-grpc-realworld-example/model"
 	pb "github.com/raahii/golang-grpc-realworld-example/proto"
@@ -44,10 +45,17 @@ func (h *Handler) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*p
 		return nil, status.Error(codes.Canceled, err.Error())
 	}
 
+	token, err := auth.GenerateToken(u.ID)
+	if err != nil {
+		err := fmt.Errorf("Failed to create token. %w", err)
+		h.logger.Error().Err(err)
+		return nil, status.Error(codes.Aborted, "internal server error")
+	}
+
 	return &pb.UserResponse{
 		User: &pb.LoginedUser{
 			Email:    u.Email,
-			Token:    auth.GenerateJWT(u.ID),
+			Token:    token,
 			Username: u.Username,
 			Bio:      u.Bio,
 			Image:    u.Image,
@@ -72,10 +80,53 @@ func (h *Handler) LoginUser(ctx context.Context, req *pb.LoginUserRequest) (*pb.
 		return nil, status.Error(codes.InvalidArgument, "invalid email or password")
 	}
 
+	token, err := auth.GenerateToken(u.ID)
+	if err != nil {
+		err := fmt.Errorf("Failed to create token. %w", err)
+		h.logger.Error().Err(err)
+		return nil, status.Error(codes.Aborted, "internal server error")
+	}
+
 	return &pb.UserResponse{
 		User: &pb.LoginedUser{
 			Email:    u.Email,
-			Token:    auth.GenerateJWT(u.ID),
+			Token:    token,
+			Username: u.Username,
+			Bio:      u.Bio,
+			Image:    u.Image,
+		},
+	}, nil
+}
+
+// get current user
+func (h *Handler) CurrentUser(ctx context.Context, req *empty.Empty) (*pb.UserResponse, error) {
+	h.logger.Info().Msg("get current user")
+
+	userID, err := auth.GetUserID(ctx)
+	if err != nil {
+		h.logger.Error().Err(err)
+		return nil, status.Errorf(codes.Unauthenticated, "unauthenticated")
+	}
+
+	u := model.User{}
+	err = h.db.Where("id = ?", userID).First(&u).Error
+	if err != nil {
+		err = fmt.Errorf("token is valid but the user not found: %w", err)
+		h.logger.Error().Err(err)
+		return nil, status.Error(codes.NotFound, "not user found")
+	}
+
+	token, err := auth.GenerateToken(u.ID)
+	if err != nil {
+		err := fmt.Errorf("Failed to create token. %w", err)
+		h.logger.Error().Err(err)
+		return nil, status.Error(codes.Aborted, "internal server error")
+	}
+
+	return &pb.UserResponse{
+		User: &pb.LoginedUser{
+			Email:    u.Email,
+			Token:    token,
 			Username: u.Username,
 			Bio:      u.Bio,
 			Image:    u.Image,
